fixing svg scale on safari

--- a/output.css
+++ b/output.css
@@ -816,6 +816,10 @@ video {
   width: 100vw;
 }
 
+.w-\[inherit\] {
+  width: inherit;
+}
+
 .min-w-32 {
   min-width: 8rem;
 }
